src/pages/ru/v1.22.0/sdk/constructor.mdx
---
title: "JavaScript SDK - Инициализация SDK"
metaTitle: "JavaScript SDK - Инициализация SDK"
metaDescription: "Параметры конфигурации для метода конструктора трекера"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

## Установка

Следующая команда установит трекер и вместе с ним SDK, чтобы вы могли воспользоваться всеми возможностями трекера.

```bash
npm i @openreplay/tracker
```

## Инициализация
При создании экземпляра трекера OpenReplay вы можете указать несколько параметров конфигурации для настройки различных аспектов записи и работы с записями.

Вы должны установить опцию `projectKey` в конструкторе. Вы можете получить это значение из вашей панели управления OpenReplay в разделе 'Preferences > Projects'.

<Aside type="tip">
  Обратите внимание, что если у вас несколько проектов, вам нужно внимательно выбирать ключ проекта.
</Aside>


### Одностраничные приложения (SPA)
Если ваш веб-сайт является **Одностраничным приложением (SPA)**, вы можете использовать трекер как синглтон:

```js
import { tracker } from '@openreplay/tracker'

tracker.configure({
	projectKey: PROJECT_KEY,
  ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
})

tracker.start() // returns a promise with session info (sessionID, sessionHash, userUUID)
```

Кроме того, вы можете создать новый экземпляр класса:

```js
import OpenReplay from '@openreplay/tracker';
//...
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY
});
tracker.start(); // returns a promise with session info (sessionID, sessionHash, userUUID)
```

### Серверный рендеринг (SSR)
В противном случае, если ваше веб-приложение использует **Серверный рендеринг (SSR)** (например, NextJS, NuxtJS), используйте следующий фрагмент кода.
Убедитесь, что `tracker.start()` вызывается после запуска приложения (в `useEffect` или `componentDidMount`).

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY,
      ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
});
//...
function MyApp() {
  useEffect(() => { // use componentDidMount in case of React Class Component
    tracker.start(); // returns a promise with session info (sessionID, sessionHash, userUUID)
  }, [])
}
```

<Aside type="tip">
Если вы используете определенный веб-фреймворк, ознакомьтесь с нашим разделом [Tracker Setup](/using-or), чтобы узнать, как начать.
</Aside>

## Пример

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY,
      ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
      capturePerformance: true,
      __DISABLE_SECURE_MODE: true // for local testing
});
```

## Параметры инициализации

Существует набор опций, которые вы можете передать в конструктор. Только `projectKey` является обязательным.

### Общие настройки 

- `projectKey: string` ID проекта, который вы отслеживаете.
- `sessionHash?: string` Хэш начальной сессии. Это полезно, когда сессии переходят через разные поддомены в вашем веб-приложении, но вы хотите объединить их в одну запись. В случае, если продолжить сессию невозможно (не существует или завершена), трекер автоматически начнет новую. Он также возвращается при вызове `stop()`. Подробнее об этом [здесь](/troubleshooting/session-recordings#replaysarebrokenacrosssubdomains).
- `ingestPoint?: string` Ваш домен OpenReplay (например, https://openreplay.mydomain.com/ingest), на который трекер будет отправлять события. Это необязательно для пользователей OpenReplay Cloud. По умолчанию: `https://api.openreplay.com/ingest` (указывает на OpenReplay Cloud). 
- `revID?: string` ID ревизии вашего веб-приложения. Полезно при поиске проблем, происходящих в определенной версии выпуска.
- `resourceBaseHref?: string` Ссылается на общедоступный домен, откуда OpenReplay может получить ресурсы (стили, шрифты и иконки). Поскольку они необходимы для корректного воспроизведения сессии, эта опция полезна для обхода ограничения размещения вашего сайта (и, следовательно, ресурсов) в приватном домене. Пример: `https://mypublicsite.com/assets/`.
- `captureIFrames?: boolean` Для захвата всех iFrame того же домена в вашем веб-приложении. Если вы хотите отслеживать определенный iFrame, просто добавьте HTML-атрибут `data-openreplay-capture` к тегу `<iframe>`. По умолчанию: `true`.
- `disableClickmaps?: boolean` Для отключения вычисления CSS-селекторов (используется в картах кликов). По умолчанию: `false`.
- `__debug__: number` Для включения логов отладки. По умолчанию: `0` (выключено).
    - `2`: Ошибки.
    - `3`: Ошибки и предупреждения.
    - `4`: Ошибки, предупреждения и логи.
    - `5`: Подробно.
- `autoResetOnWindowOpen?: boolean` Включите эту опцию, чтобы сбросить sessionID при открытии новой вкладки из вашего приложения. Это переопределяет метод `window.open`, чтобы избежать дублирования sessionID из-за общего хранения сессии между вкладками браузера. По умолчанию: `false`.
- `forceSingleTab: boolean` Отключает возможность записи в нескольких вкладках, которая объединяет пользовательские сессии, проведенные в нескольких вкладках, в одно воспроизведение. Вместо этого, при включении этой опции, сессии, захваченные в разных вкладках браузера, будут записаны в отдельные записи. По умолчанию: `false`.
- `disableStringDict: boolean` Отключает логику словаря строк (для оптимизации хранения) в записях. По умолчанию: `false`.
- `fixedCanvasScaling: boolean` Заставляет изображения canvas рендериться с плотностью пикселей 1 вместо devicePixelRatio (снижает потенциальное качество изображения, чтобы итоговый результат был меньше по размеру). По умолчанию: `false`.
- `disableCanvas?: boolean` Отключает запись элементов canvas. По умолчанию: `false`.
- `assistSocketHost?: string` Может быть использован для установки определенного хоста для подключения плагина assist. По умолчанию использует значение `ingestPoint`.
- `nodes?: { maintainer: MaintainerOptions }` Новая опция `nodes.maintainer` помогает управлять памятью и очищать DOM-узлы, которые больше не используются. Имеет следующие параметры:
    - `interval: number`: Интервал времени (в миллисекундах) между запусками очистки. По умолчанию: `30 * 1000` (30 секунд).
    - `batchSize: number`: Количество узлов для проверки во время каждого запуска очистки. По умолчанию: `2500`.
    - `enabled: boolean`: Включение или отключение обслуживания узлов. По умолчанию: `true`.

### Таблицы стилей

- `inlineCss: number`: Заставляет трекер записывать и отправлять удалённые таблицы стилей как обычные сообщения вместо кэширования их на бэкенде. Это полезно, когда CSS-файлы являются приватными и поэтому не могут быть закэшированы бэкендом OpenReplay. Значения могут быть:
    - `0`: CSS-файл кэшируется бэкендом. Поведение по умолчанию.
    - `1`: Попытается записать связанный css-файл как объект AdoptedStyleSheet.
    - `2`: Получает файл, затем моделирует поведение AdoptedStyleSheets для воспроизведения.
    - `3`: Получает файл, затем сохраняет его как обычный css внутри узла `<style>` -- используйте эту опцию, если в ваших CSS-файлах много сокращённых свойств (покрывает баг спецификации CSSOM).
- `css: CssRulesOptions`: Обеспечивает лучшую поддержку приложений, построенных с использованием библиотеки emotion-js (например, компонентов MUI). Поставляется со следующими параметрами:
    - `scanInMemoryCSS: boolean`: Включите это, если у вас возникают проблемы со стилями, созданными emotionjs. По умолчанию: `false`.
    - `checkCssInterval: number`: Как часто сканировать отслеживаемые таблицы стилей, у которых есть пустые правила. По умолчанию: `200` (мс).
    - `checkLimit: number`: Полезно для случаев с ограниченным количеством мутаций и/или когда таблицы стилей гидратируются на клиенте после первоначального рендеринга. Применяется к каждой таблице стилей индивидуально. Значение должно быть = X/checkCssInterval, где X — это длительность наблюдения в мс. По умолчанию: `0` (отключено). 

### Конфиденциальность

- `respectDoNotTrack?: boolean` Не запускать трекер, если в браузере пользователя включен флаг do-not-track. По умолчанию: `false`.
- `obscureTextEmails?: boolean` Скрывает электронные почты в текстовых элементах. Электронные почты будут заменены случайной цепочкой звездочек. По умолчанию: `true`.
- `obscureTextNumbers?: boolean` Скрывает числа в текстовых элементах. Числа будут заменены случайной цепочкой звездочек. По умолчанию: `false`.
- `obscureInputEmails?: boolean` Скрывает электронные почты в полях ввода. Значения электронной почты будут заменены случайной цепочкой звездочек. По умолчанию: `true`.
- `obscureInputNumbers?: boolean` Скрывает числа в полях ввода. Числовые значения будут заменены случайной цепочкой звездочек. Если отключено, обязательно [очистите поля ввода](/installation/sanitize-data/#granular-level), которые могут содержать конфиденциальные данные, такие как почтовые индексы или данные кредитных карт. По умолчанию: `true`.
- `obscureInputDates?: boolean` Скрывает даты в полях ввода. Значения дат будут заменены случайной цепочкой звездочек. По умолчанию: `false`.
- `defaultInputMode?: 0 | 1 | 2` Режим захвата по умолчанию для значений ввода. Соответственно: обычный, скрытый или игнорируемый. По умолчанию: `2` (игнорируемый).
- `urls`: Позволяет вам настроить, как записываются события местоположения страницы, с помощью следующих опций:
	- `urlSanitizer?: (url: string) => string` Позволяет вам очистить url страницы (например, для удаления токенов использования).
	- `titleSanitizer?: (title: string) => string` Позволяет вам очистить заголовок страницы.
- `resourceNameSanitizer?: (url: string) => string` Позволяет вам очистить URL для записанных сетевых ресурсов.

Обратите внимание, что исключенные данные скрываются или подавляются перед отправкой на серверы OpenReplay. Изменения, примененные к вышеуказанным опциям, не могут быть ретроактивными и будут применяться только к вновь собранным данным. См. [Sanitize Data](/installation/sanitize-data) для получения более подробной информации.

### Консоль

- `consoleMethods?: Array<'log' | 'info' | 'warn' | 'error'  'debug' | 'assert'> | null` Указывает список методов консоли для захвата. По умолчанию: `['log', 'info', 'warn', 'error', 'debug', 'assert']`
- `consoleThrottling?: number` Максимальное количество записей консоли, захватываемых в секунду. По умолчанию: `30`.

### Исключения

- `captureExceptions?: boolean` Захватывает исключения JavaScript и трассировки стека. По умолчанию: `true`.

### Тайминги

- `captureResourceTimings?: boolean` Записывает тайминги ресурсов. По умолчанию: `true`.
- `capturePageLoadTimings?: boolean` Записывает тайминги загрузки страницы. По умолчанию: `true`.
- `capturePageRenderTimings?: boolean` Вычисляет метрики рендеринга страницы, такие как Speed Index, Visually Complete или Time To Interactive. Требует `captureResourceTimings = true`. По умолчанию: `true`.

### Производительность

- `capturePerformance?: boolean` Для захвата метрик производительности, таких как частота кадров, использование CPU и памяти. По умолчанию: `true`.
- `longTasks?: boolean` Для захвата событий long-animation-frame. По умолчанию `false`.

### Сеть

Опция `network` относится к захвату сетевых запросов и полезной нагрузки для `fetch` и `XHR`.

```js
network?: {
    failuresOnly: boolean;
    sessionTokenHeader: string;
    ignoreHeaders: Array<string> | boolean;
    capturePayload: boolean; // make sure you sanitize your data before enabling it
    sanitizer: (RequestResponseData) => RequestResponseData | null;
		captureInIframes: boolean;
  	axiosInstances: AxiosInstance[];
    useProxy?: boolean;
		tokenUrlMatcher?: (url: string) => boolean;
  }
```

См. [Network Options](/sdk/network-options) для примеров и более подробной информации о том, как скрывать конфиденциальные данные. 

### Canvas

Опция `canvas` относится к захвату элементов canvas/WebGL:

```js
canvas?: {
  disableCanvas?: boolean
  fixedCanvasScaling?: boolean
  useAnimationFrame?: boolean
  fileExt?: 'webp' | 'png' | 'jpeg' | 'avif'
}
```

См. [Canvas and WebGL](/session-replay/canvas) для того, чтобы узнать, как включить эту функцию, и получить более подробную информацию о доступных опциях.

### Кросс-доменные iFrame

Опция `crossdomain` относится к захвату iFrame с разных доменов. Используется в сочетании с опцией `captureIFrames`, которая должна быть установлена в `true`.

```ts 
	crossdomain?: {
		/**
		 * Enable cross-domain tracking
		 * @default false
		 * */
		enabled?: boolean
		/**
		 * Used to specify the parent domain, will be '*' by default
		 * (Check your CSP settings)
		 * @default '*'
		 * */
		parentDomain?: string
	}
```
Начиная с версии трекера [14.0.10](https://github.com/openreplay/openreplay/blob/dev/tracker/tracker/CHANGELOG.md), **атрибут `data-domain` больше не требуется** на HTML-элементах при работе с кросс-доменными iFrame.

См. [Cross-domain iFrame Tracking](/session-replay/crossdomain-iframe) для получения более подробной информации о том, как захватить iFrame с другого домена. 

### Курсор мыши

Опция `mouse` относится к захвату селекторов для кликов с целью построения карт кликов.

```js
mouse?: 
  {
  disableClickmaps?: boolean
  minSelectorDepth?: number
  nthThreshold?: number
  maxOptimiseTries?: number
  }
```

- `disableClickmaps?: boolean` Полностью отключает вычисление селекторов. По умолчанию: `false`.
- `minSelectorDepth?: number` Минимальная длина оптимизированного селектора (по умолчанию 2). Пример: `body > div > div > p => body > p`
- `nthThreshold?: number` Количество попыток селектора перед использованием селекторов nth-child. Это **дорогостоящая операция**, и она может привести к значительной нагрузке, не устанавливайте выше 2000. По умолчанию: `1000`.
- `maxOptimiseTries?: number` Количество попыток оптимизировать и сократить селектор. По умолчанию: `10 000`.

### Повторные подключения

- `connAttemptCount?: number` Максимальное количество повторных попыток, когда HTTP-запросы трекера не достигают бэкенда. По умолчанию: `10`.
- `connAttemptGap?: number` Длительность между каждой повторной попыткой (выражается в мс). По умолчанию: `8000`.

### Feature Flags

- `onFlagsLoad` колбэк, используемый для выполнения действия после загрузки feature flags (каждый раз).

```ts
 flags?: {
 	onFlagsLoad?: (flags: IFeatureFlag[]) => void
 } 

// ...
interface IFeatureFlag {
  key: string
  is_persist: boolean
  value: string | boolean
  payload: string
}
```

### Безопасность

- `__DISABLE_SECURE_MODE?: boolean` Для разрешения небезопасного соединения между трекером и бэкендом на сайтах без SSL. Это следует использовать **только в целях разработки**. По умолчанию: `false`.

<Aside type="caution">
    Обратите внимание, что при использовании `__DISABLE_SECURE_MODE` с вашей локальной рабочей станции вы **можете** увидеть визуальные различия при просмотре записи, такие как неправильная загрузка CSS-стилей.
    Для оптимальной записи ваши тесты должны выполняться с общедоступного URL.
</Aside>

## Методы

<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
  <ORCard title="Узнайте о методах" url="/sdk/methods" hideIcon={true} width="100"/>
</div>
